# logui

./: .gitignore  Cargo.toml
src/: constants.rs  main.rs
src/app/: events.rs  mod.rs  model.rs  view.rs
src/logparse/: mod.rs
