[package]
name = "logui"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
relm4 = { version = "0.6", features = ["libadwaita"] }
relm4-components = { version = "0.6", features = ["web"] }
relm4-icons = { version = "0.6", features = ["plus"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
